# daf

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  uwsgi.ini
.github/workflows/: codeql-analysis.yml  django.yml
audio/audio/: settings.py  urls.py
clients/: __init__.py  simple.py  youtube.py
daf/: manage.py
daf/daf/: asgi.py  settings.py  urls.py  wsgi.py
daf/podcast/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
daf/podcast/migrations/: 0001_initial.py  0002_episode_public_image_podcast_public_image.py  0002_remove_podcast_name_podcast_author_and_more.py  0003_alter_episode_audio_alter_podcast_image.py  0003_customfeed.py  0004_alter_episode_audio_alter_podcast_image.py  0005_podcast_slug.py  0006_podcast_copyright.py  0007_episode_author_episode_image_alter_episode_title.py  0008_alter_episode_audio.py
