[project]
name = "daf"
version = "1.1.28"
description = "Django Audio Feed is a simple web application that allows to create custom RSS podcast feeds."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.2",
    "flake8>=7.3.0",
    "markdown>=3.10.2",
    "pillow>=12.1.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
